# strands_documentation

./: #setup.md#  .gitignore  LICENSE  README.md  index.html  mkdocs.yml  search.html  setup.md  sitemap.xml  summary.md
aaf_deployment/: aaf_bellbot.xml  aaf_bringup.xml  aaf_control_ui.xml  aaf_logging.xml  aaf_monitor_logs.xml  aaf_simulation.xml  aaf_walking_group.xml  aaf_waypoint_sounds.xml  index.html  voice_output.xml
activity_analysis/: index.html  strands_engagement_checker.xml
annotation_tool_kth/: index.html
autonomous_patrolling/: index.html
conf/: conf.yaml  datasets.yaml
data_analysis/: index.html
data_compression/: index.html
datasets/: auto_benchmark.md  care_home.md  datasets.yaml  index.html  index.md  kth_3d.md  kth_lt.md  kth_lt_labels.md  kth_lt_moving.md  mht_rgbd.md  small_office.md  three_d_net.md  tuw.md
dh_bin_wizard/: index.html
docs/: Makefile  conf.py  index.md  index.rst  mapping.rst  packages.rst  quick_setup.rst  setup.md  setup.rst  setup_from_scratch.rst
edge_leg_detector/: index.html  package.xml
elan_analyser/: index.html
fremen/: index.html
github_manager/: index.html
lamor15/: index.html  lamor_bringup.xml  online_qsr_creator.xml
lol/: index.html
mkdocs/: search_index.json
mongodb_store/: index.html
planning_tutorial/: index.html  package.xml
plugin_local_planner/: plp_basic_cost_functions.xml  plp_extra_plugins.xml  plugin_local_planner.xml
qrobot/: index.html
resources/: basic_map.blend  basic_map.pgm  basic_map.tpl  basic_map.yaml  basic_map_gmapping.pgm  basic_map_gmapping.yaml
robblog/: index.html  package.xml
robblog/data/2014-05-05-strands-test-post/: index.html
robblog/data/example/: index.html
scitos_2d_navigation/: index.html  package.xml
scitos_2d_navigation/wiki/Home/: index.html
scitos_apps/: index.html  ptu_follow_frame.xml  scitos_apps.xml  scitos_cmd_vel_mux.xml  scitos_dashboard.xml  scitos_docking.xml  scitos_ptu.xml  scitos_teleop.xml  scitos_touch.xml
scitos_common/: index.html  scitos_common.xml  scitos_description.xml  scitos_msgs.xml
scitos_drivers/: flir_pantilt_d46.xml  scitos_bringup.xml  scitos_drivers.xml  scitos_mira.xml  scitos_pc_monitor.xml
scripts/: doc_scraper.py  gh_utils.py
semantic_segmentation/: index.html  package.xml
semantic_segmentation/src/densecrf/: index.html
semantic_segmentation/src/docs/: index.html
semantic_segmentation/src/gtest-1.7.0/: index.html
semantic_segmentation/src/liblbfgs/: index.html
sensortag/: index.html  package.xml
setup/: index.html
soma/: index.html  soma.xml  soma_manager.xml  soma_map_manager.xml  soma_msgs.xml  soma_objects.xml  soma_pcl_segmentation.xml  soma_roi_manager.xml  soma_trajectory.xml  soma_utils.xml  soma_visualizer.xml
strands-docker/: index.html
strands-project.github.io/: index.html
strands_3d_mapping/: index.html
strands_analysis/: index.html
strands_apps/: door_pass.xml  index.html  marathon_reporter.xml  odometry_mileage.xml  pose_extractor.xml  ramp_climb.xml  reconfigure_inflation.xml  roslaunch_axserver.xml  state_checker.xml  static_transform_manager.xml  strands_apps.xml  strands_emails.xml  topic_republisher.xml  topological_roslaunch.xml  watchdog_node.xml
strands_data_to_qsrlib/: index.html  package.xml
strands_deployment/: review_bringup.xml  walking_group_demo.xml
strands_documentation/: index.html
strands_executive/: index.html
strands_executive_behaviours/: automated_routine.xml  routine_behaviours.xml
strands_exploration/: activity_exploration.xml  edge_exploration.xml  exploration_bid_manager.xml  exploration_tasks_generator.xml  index.html  spatiotemporal_exploration.xml  strands_exploration.xml  strands_exploration_msgs.xml
strands_hri/: bellbot_action_server.xml  bellbot_gui.xml  bellbot_scheduler.xml  han_action_dispatcher.xml  hrsi_launch.xml  hrsi_representation.xml  hrsi_state_prediction.xml  hrsi_velocity_costmaps.xml  index.html  strands_gazing.xml  strands_hri.xml  strands_hri_launch.xml  strands_human_aware_navigation.xml  strands_human_following.xml  strands_interaction_behaviours.xml  strands_simple_follow_me.xml  strands_visualise_speech.xml
strands_interfaces/: index.html  strands_admin_web_ui.xml
strands_morse/: index.html  package.xml
strands_morse/bham/: index.html
strands_morse/bham/architecture/: index.html
strands_morse/bham/real_TO-BE-MOVED/: index.html
strands_morse/wiki/BHAM-Morse/: index.html
strands_morse/wiki/Home/: index.html
strands_morse/wiki/MORSE-on-OSX-using-Homebrew/: index.html
strands_morse/wiki/MORSE-on-Ubuntu/: index.html
strands_movebase/: index.html
strands_msgs/: index.html
strands_navigation/: index.html
strands_papers/: index.html
strands_perception_people/: index.html
strands_qsr/: index.html  spatial_relation_classifier.xml  strands_qsr_echo_classifier.xml  strands_qsr_evalution.xml  strands_qsr_generator.xml  strands_qsr_learned_qualitators.xml  strands_qsr_msgs.xml  strands_qsr_random_classifier.xml  strands_qsr_sa_classifier.xml  strands_qsr_tpc_classifier.xml
strands_qsr_lib/: index.html
strands_recovery_behaviours/: backoff_behaviour.xml  backtrack_behaviour.xml  index.html  strands_human_help.xml  strands_monitored_nav_states.xml  strands_recovery_behaviours.xml  walking_group_recovery.xml
strands_social/: card_image_tweet.xml  datamatrix_read.xml  fake_camera_effects.xml  image_branding.xml  index.html  social_card_reader.xml  strands_social.xml  strands_tweets.xml
strands_systems/: index.html  strands_bringup.xml
strands_tabletop_perception/: dynamic_object_learning.xml  evaluate_tabletop_views.xml  generic_3d_object_classifier.xml  index.html  known_table_locator.xml  manual_table_storer.xml  multiview_object_recognizer.xml  multiview_object_recognizer_batch.xml  mumford_shah_segmentation.xml  mv_object_classifier.xml  object_rgbd_segmenter.xml  object_search_action.xml  pcd_filter.xml  pcl_object_segmenter.xml  pcl_visualizer.xml  pcl_visualizer_srv_definitions.xml  perceive_tabletop_action.xml  qsr_kb.xml  (+8 more)
twitter_bootstrap/: index.html  package.xml
(+565 files in other folders)
