<?xml version="1.0"?>
<package>
  <name>robblog</name>
  <version>0.0.1</version>
  <description>The robblog package</description>

  <maintainer email="n.a.hawes@cs.bham.ac.uk">Nick Hawes</maintainer>


  <license>MIT</license>
 
  <!-- <url type="website">http://wiki.ros.org/robblog</url> -->

  <author email="n.a.hawes@cs.bham.ac.uk">Nick Hawes</author> -->


  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>mongodb_store</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>cv_bridge</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>opencv2</build_depend>
  <build_depend>mongodb_store_msgs</build_depend>
  <build_depend>actionlib_msgs</build_depend>
  
  <run_depend>mongodb_store</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>cv_bridge</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>opencv2</run_depend>
  <run_depend>nodejs</run_depend>
  <run_depend>rubygem-jekyll</run_depend>
  <run_depend>mongodb_store_msgs</run_depend>
  <run_depend>actionlib_msgs</run_depend>

  <buildtool_depend>ruby1.9.3</buildtool_depend>
  <buildtool_depend>nodejs</buildtool_depend>

  <export>

  </export>
</package>
