<?xml version="1.0"?>
<package>
  <name>semantic_segmentation</name>
  <version>0.0.5</version>
  <description>The semantic_segmentation package</description>

  <maintainer email="hermans@vision.rwth-aachen.de">hermans</maintainer>

  <license>MIT</license>



  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>libpcl-all-dev</build_depend>
  <build_depend>pcl_ros</build_depend>  
  <build_depend>std_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>semantic_map_publisher</build_depend>
  <build_depend>libncurses-dev</build_depend>
  
  <run_depend>roscpp</run_depend>
  <run_depend>libpcl-all</run_depend>
  <run_depend>pcl_ros</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>semantic_map_publisher</run_depend>
  <run_depend>libncurses-dev</run_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
