<?xml version="1.0"?>
<package>
  <name>strands_morse</name>
  <version>0.1.16</version>
  <description>The strands_morse package</description>

  <maintainer email="marc@hanheide.net">Marc Hanheide</maintainer>
  <maintainer email="l.kunze@cs.bham.ac.uk">Lars Kunze</maintainer>
  <maintainer email="cburbridge@gmail.com">Chris Burbridge</maintainer>
  

  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>BSD</license>


  <url type="website">http://www.strands-project.eu</url>
  <url type="repository">https://github.com/strands-project/strands_morse</url>
  <url type="bugtracker">https://github.com/strands-project/strands_morse/issues</url>


  <author email="l.kunze@cs.bham.ac.uk">Lars Kunze</author>
  <author email="cburbridge@gmail.com">Chris Burbridge</author>
  
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>pcl_ros</build_depend>
  <build_depend>libpcl-all-dev</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>message_filters</build_depend>
  <build_depend>cv_bridge</build_depend>
  <build_depend>python-opencv</build_depend>
  <build_depend>libopencv-dev</build_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>pcl_ros</run_depend>
  <run_depend>libpcl-all</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>message_filters</run_depend>
  <run_depend>strands-morse-simulator</run_depend>
  <run_depend>cv_bridge</run_depend>
  <run_depend>python-opencv</run_depend>
  <run_depend>libopencv-dev</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>topic_republisher</run_depend>
  <run_depend>strands_movebase</run_depend>
  <run_depend>scitos_msgs</run_depend>
  <run_depend>scitos_description</run_depend>
  <run_depend>scitos_ptu</run_depend>
  <run_depend>openni_wrapper</run_depend>

  <buildtool_depend>catkin</buildtool_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- You can specify that this package is a metapackage here: -->
    <!-- <metapackage/> -->

    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
